# llm-classification

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  lefthook.yml  main.py  mypy.ini  pyproject.toml  requirements.txt
app/: config.py
app/cli/: advert_commands.py  category_commands.py  experiment_commands.py  test_commands.py
app/config/: config.py
app/controllers/: advert_controller.py  category_controller.py  experiment_controller.py
app/helpers/: cron_helper.py  file_helper.py  model_helper.py  os_helper.py  prompt_helper.py  stat_helper.py  text_helper.py
app/infrastructure/: container.py  di.py
app/repositories/: ads_repository.py  advert_file_repository.py  categories_repository.py  category_diff_repository.py  category_file_repository.py  category_pair_diff_repository.py  category_pair_file_repository.py  category_params_repository.py
app/services/: advert_service.py  category_params_service.py  category_service.py  classifer_service.py  differ_service.py  experiment_service.py  summary_service.py
core/contracts/: advert_repository.py  category_diff_repository.py  category_pair_repository.py  category_repository.py  experiment_evaluator.py  experiment_repository.py  llm_client.py  llm_runner.py  prompt_strategy.py  use_case.py
core/domain/: advert.py  category.py
core/policies/: prompt_context_builders.py  stat_calculator.py
core/types/: category_diff.py  category_prediction.py  classification_metrics.py
core/use_cases/: build_category_bow.py  build_category_bow_bu.py  compare_category_pair.py  experiment_one.py  experiment_three.py  experiment_two.py  pairwise_classification.py  predict_five_categories.py  predict_n_categories.py  summarize_advert.py  (+2 more)
infra/: di.py
src/: main.py
tasks/: taskiq_task.py
(+154 files in other folders)
